--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Московский инновационный кластер</title>
+    <link rel="stylesheet" href="./css/switchstyle.css"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div class="container">
         <header class="tm-header">
             <div class="tm-width">
-                <div class="tm-header-cntr-1">
+                <div class="tm-header-cont-1">
 
                     <div class="logo">
                         <img src="./images/logo.svg" alt="logo" />
@@ -98,7 +99,7 @@
 
             <!--TODO: Заменить все длинные названия на короткие-->
             <div class="tm-width">
-                <div class="tm-about-cluster-container mb-6 pt-3">
+                <div class="cluster-cont-1 mb-6 pt-3">
                     <div class="cluster-card">
                         <div class="cluster-card-text">
                             <div class="global-tag-line">ОБ ОТРАСЛЕВЫХ КЛАСТЕРАХ</div>
@@ -180,7 +181,7 @@
             </div>
 
             <div class="tm-width">
-                <div class="div-tm-project-container mb-6">
+                <div class="cluster-cont-2 mb-6">
                     <div class="text-decoration">
                         <div class="global-tag-line">Кластеры</div>
                         <h2>Вы можете присоединиться</h2>
@@ -279,6 +280,19 @@
                     </div>
                     <div class="cluster-btn">
                         <a class="btn">Посмотреть все отрасли кластера</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="tm-width">
+                <div class="cluster-cont-3">
+                    <div>
+                        <div class="global-tag-line">ПРЕИМУЩЕСТВА</div>
+                        <h2>Отраслевые кластеры</h2>
+                        <label class="switch">
+                            <input type="checkbox" class="switch-input">
+                            <span class="switch-slider"></span>
+                        </label>
                     </div>
                 </div>
             </div>
