--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
                 <div class="tm-about">
 
-                    <div class="tm-about-frame">
+                    <div class="tm-about-frame cluster-thing">
                         <div class="icon">
                             <img src="./images/icons/team.svg" alt=""/>
                         </div>
@@ -132,7 +132,7 @@
                         </div>
                     </div>
 
-                    <div class="tm-about-frame">
+                    <div class="tm-about-frame people">
                         <div class="icon">
                             <img src="./images/icons/hand-coins.svg" alt=""/>
                         </div>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
 
-                    <div class="tm-about-frame">
+                    <div class="tm-about-frame project-real">
                         <div class="icon">
                             <img src="./images/icons/promo.svg" alt=""/>
                         </div>
@@ -152,7 +152,9 @@
                         </div>
                     </div>
 
-                    <div class="tm-about-frame">
+                    <div class="liner"></div>
+
+                    <div class="tm-about-frame money-paid">
                         <div class="icon">
                             <img src="./images/icons/case.svg" alt=""/>
                         </div>
@@ -162,7 +164,7 @@
                         </div>
                     </div>
                     
-                    <div class="tm-about-frame">
+                    <div class="tm-about-frame tech-take">
                         <div class="icon">
                             <img src="./images/icons/company.svg" alt=""/>
                         </div>
@@ -172,7 +174,7 @@
                         </div>
                     </div>
 
-                    <div class="tm-about-frame">
+                    <div class="tm-about-frame tech-req">
                         <div class="icon">
                             <img src="./images/icons/user_check.svg" alt=""/>
                         </div>
@@ -185,10 +187,8 @@
             </div>
 
             <div class="cluster-cont-2 mb-6">
-                <div class="text-decoration">
-                    <div class="global-tag-line">Кластеры</div>
-                    <h2>Вы можете присоединиться</h2>
-                </div>
+                <div class="global-tag-line">Кластеры</div>
+                <h2>Вы можете присоединиться</h2>
 
                 <div class="project-cards">
 
@@ -217,7 +217,7 @@
                             <img src="./images/cluster_assist_tech.svg" alt="">
                         </div>
                         <div class="cluster-info">
-                            <div class="info-text">Биофармацевтика и медицинские технологии</div>
+                            <div class="info-text">Кластер Ассестивных технологий</div>
                             <div class="info-project-ppl">
                                 <div class="info-project">
                                     <div class="info-project-high">15</div>
@@ -237,7 +237,7 @@
                             <img src="./images/cluster_building_tech.svg" alt="">
                         </div>
                         <div class="cluster-info">
-                            <div class="info-text">Биофармацевтика и медицинские технологии</div>
+                            <div class="info-text">Кластер строительных технологий</div>
                             <div class="info-project-ppl">
                                 <div class="info-project">
                                     <div class="info-project-high">20</div>
@@ -257,7 +257,7 @@
                             <img src="./images/green_msc.svg" alt="">
                         </div>
                         <div class="cluster-info">
-                            <div class="info-text">Биофармацевтика и медицинские технологии</div>
+                            <div class="info-text">Зелёная москва</div>
                             <div class="info-project-ppl">
                                 <div class="info-project">
                                     <div class="info-project-high">11</div>
